# hackathon_solution

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  compose.yaml  index.html  requirements.txt
api/: main.py
engine/: main.cpp
tests/api1/: test_transaction_builder.py
tests/api_tests/: test_transaction_calculator.py  test_transaction_filter.py  test_transaction_validator.py
tests/engine_tests/: engine.cpp
tests/integration_tests/: test_integrity.py
